# novel_testbed_app

./: .gitignore  README-cli.md  README-docs.md  README.md  Roadmap.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: api-inference.md  api-segmentation.md  api.md  diagram-class.md  how-to-manually-segment.md  index.md  roadmap.md  software-design.md  tool-walkthrough.md  use-the-testbed-app.md
docs/api-contracts/: index.html
docs/api-utils/: index.html
docs/diagram-class/: index.html
docs/how-to-manually-segment/: index.html
docs/roadmap/: index.html
docs/search/: search_index.json
docs/software-design/: index.html
docs/use-the-testbed-app/: index.html
examples/: Heming-Way-Hills-LIke-White-Elephants-contract.yaml  Heming-Way-Hills-LIke-White-Elephants.md
novel_testbed/: __init__.py  cli.py  logging_config.py  models.py
novel_testbed/contracts/: __init__.py  assessor.py  contract.py  rules.py
novel_testbed/inference/: auto_contract.py  base.py  llm_client.py  llm_inferencer.py  prompts.py  types.py
novel_testbed/parser/: base.py  commonmark.py
novel_testbed/segmentation/: segmenter.py
novel_testbed/utils/: source_fingerprint.py
site/: 404.html  api-contracts.md  api-core.md  api-inference.md  api-parser.md  api-utils.md  diagram-package.md  index.html  index.md  objects.inv  roadmap.md
site/api/: index.html
site/api-core/: index.html
site/api-inference/: index.html
site/api-parser/: index.html
site/api-segmentation/: index.html
site/diagram-package/: index.html
site/tool-walkthrough/: index.html
(+20 files in other folders)
